- added Peer signature and testing - added LanacSignatureException - block and genesis block in Lanac - remove useless verifyAction from PeerIdentityTest (now in Lanac)